--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,21 @@
 html, body {
   height: 100%; }
 
+body {
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: scroll; }
+
 .container-fluid {
   height: 100%; }
+  .container-fluid nav {
+    margin: 2% auto;
+    display: flex;
+    justify-content: space-around;
+    width: 60%; }
+    .container-fluid nav img {
+      height: 70px;
+      width: auto; }
   .container-fluid .projects-preview {
     height: 100%; }
     .container-fluid .projects-preview .project {
@@ -18,6 +31,20 @@ html, body {
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         transform: translateZ(20px); }
+  .container-fluid #menu {
+    position: fixed;
+    right: 0;
+    top: 50%;
+    bottom: 50%; }
+    .container-fluid #menu .list-group-item {
+      background-color: lightgray;
+      height: 10px;
+      width: 10px;
+      border-radius: 50%;
+      border: none; }
+    .container-fluid #menu .active {
+      background-color: dimgray; }
 
 /*# sourceMappingURL=style.css.map */
