--- a/css/style.scss
+++ b/css/style.scss
@@ -8,13 +8,12 @@ body {
     overflow-y: scroll;
 }
 
-.container-fluid {
+.container {
     height: 100%; 
     padding: 0;
     
     nav {
 
-        
         img {
             height: 70px;
             width: auto;
@@ -39,60 +38,40 @@ body {
         
     }
     
-    
-    
-    .projects-preview {
-    height: 100%;
-        
-        .presentation {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                height: 100%;
-                width: 60%;
+    .presentation {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100%;
+        width: 60%;
+        margin: auto;
             
             .block {
-                height: 50%;
-                width: 100%;
+                height: 40%;
+                width: 40%;
                 background-color: aliceblue;
-        }
             }
-
-        
+    }
+    
+    .projects-preview {
+         
         .project {
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
+            height: 60%;
             transform-style: preserve-3d;
             
-            .project-content {
-                height: 60%;
-                width: 50%;
-                background-color: aqua;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                transform: translateZ(45px);
+            .img-content {
+                width: auto;
+                height: 80%;
                 overflow: hidden;
                 
-                img {
-                    width: 100%;
-                }
-                
-                h1 {
+                h2 {
                     position: absolute;
-                    margin: auto;
+                    bottom: 0;
+                    color: aliceblue;
                 }
             }
-            
-            .project-info {
-                position: relative;
-                top: 2%;
-            }
+        
         }
     }
     
