--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Open+Sans'); 
+
 html, body {
     height: 100%; 
 }
@@ -6,6 +8,14 @@ body {
     position: relative;
     overflow-x: hidden;
     overflow-y: scroll;
+    h1 {
+        font-family: 'Lato', sans-serif;
+        font-weight: 700;
+    }
+    
+    p {
+        font-family: 'Open Sans', sans-serif;
+    }
 }
 
 .container {
@@ -13,10 +23,25 @@ body {
     padding: 0;
     
     nav {
-
+        display: flex;
+        justify-content: space-between;
+        width: 95%;
+        margin: 2rem auto;
+        
+        div {
+            width: 20%;
+            display: flex;
+            justify-content: space-around;
+        }
+        
         img {
             height: 70px;
             width: auto;
+        }
+        
+        .social {
+            width: 25px;
+            height: 25px;
         }
         
     }
