--- a/css/style.scss
+++ b/css/style.scss
@@ -64,6 +64,7 @@ body {
         width: 100%;
         margin: auto;
         background-color: bisque;
+        position: relative;
         
         .white {
             position: absolute;
