--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@ html, body {
 body {
   position: relative;
   overflow-x: hidden;
-  overflow-y: scroll; }
+  overflow-y: scroll;
+  padding-top: 6.7%; }
   body h1 {
     font-family: 'Lato', sans-serif;
     font-weight: 700; }
