--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,7 @@ body {
     position: relative;
     overflow-x: hidden;
     overflow-y: scroll;
+    padding-top: 6.7%;
     h1 {
         font-family: 'Lato', sans-serif;
         font-weight: 700;
