--- a/css/style.scss
+++ b/css/style.scss
@@ -86,6 +86,7 @@ body {
             
                 #photoofme {
                     height: 400px;
+                    z-index: 100;
                 }
             }
         }
